--- a/style.css
+++ b/style.css
@@ -1,42 +1,38 @@
-/* -- Google fonts API -- */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 html {
     box-sizing: border-box;
 }
 body {
-    margin: 0;
+    overflow-x: hidden;
     background-image: url("./img/background.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-    background-size: 100%;
-    -moz-background-size: 100%;
-    -webkit-background-size: 100%; 
-    -o-background-size: 100%;
+    margin: 0;
+    background-color: #343434;
     font-family: 'Roboto', sans-serif;
-    overflow-y:scroll;
 }
 A {
-    color: #fff;
-    font-size: 15px;
-    opacity: 0.75;
+    color: #ddd;
+    font-size: 14px;
 }
 A:hover {
-    opacity: 1;
+    color: #fff;
 }
 .up__btn {
-    cursor: pointer;
     position: fixed;
-    right: 5vw;
+    right: 6vw;
     bottom: 5vh;
-    opacity: 0.6;
+    opacity: 0.5;
     z-index: 9999999;
-}
-.up__btn:hover {
-    opacity: 0.9;
+    cursor: pointer;
 }
 .up__btn > img {
-    height: 45px;
+    height: 55px;
+    border: #fff solid 2px;
+    border-radius: 250px;
+}
+.up__btn:hover {
+    opacity: 1;
 }
 /* Header */
 .header {
@@ -46,10 +42,13 @@ A:hover {
     justify-content: center;
 }
 .header__link {
+    margin: 5px 5.5vw 5px 5.5vw;
     cursor: pointer;
-    margin: 5px 3.4vw 5px 3.4vw;
 }
-.header__link1__desc, .header__link2__desc, .header__link3__desc, .header__link4__desc {
+.header__link1__desc:hover, .header__link2__desc:hover, .header__link3__desc:hover {
+    color: #fff;
+}
+.header__link1__desc, .header__link2__desc, .header__link3__desc {
     vertical-align: super;
 }
 /* Search form */
@@ -79,6 +78,10 @@ A:hover {
     padding: 10px 25px;
     cursor: pointer;
 }
+.btn:hover {
+    color: darkorange;
+    background-color: #fff;
+}
 .btn__info {
     background-color: rgb(241, 155, 48);
     border-width: 2px;
@@ -87,26 +90,18 @@ A:hover {
     color: #fff;
     border-radius: 5px;
     padding: 5px 10px;
-    cursor: pointer;
-}
-.btn:hover {
-    background-color: white;
-    color: darkorange;
-}
-.btn__info:hover {
-    background-color: tomato;
 }
 /* Title */
 .title {
     text-align: center;
-    font-size: 21.75px;
+    font-size: 19px;
+    min-height: 26px;
     margin: 20px 7px;
     background-color: #fff;
     border: 2px solid #ccc;
     border-radius: 5px;
 }
 /* Main */
-
 .row {
     display: flex;
     overflow-x: scroll;
@@ -115,15 +110,15 @@ A:hover {
     min-height: 263px;
     opacity: 0.85;
 }
+.row:hover {
+    opacity: 1;
+}
 .row::-webkit-scrollbar-track {border-radius: 5px;}
 .row::-webkit-scrollbar {height: 10px;}
 .row::-webkit-scrollbar-thumb {border-radius: 5px;background: #242424;}
 .row:hover::-webkit-scrollbar-thumb {background: #777;}
-.row:hover {
-    opacity: 1;
-}
 .item {
-    margin: 5px;
+    margin: 5px 5px 5px 0;
     text-align: center;
     border: 2px solid #ccc;
     border-radius: 5px;
@@ -174,13 +169,58 @@ A:hover {
     border: 2px solid #ccc;
     border-radius: 5px;
     padding: 5px;
-    margin: 7px;
     background-color: #242424;
-    margin-bottom: 20px;
+    margin: 0 7px 20px 7px;
+}
+.frame__hide {
+    position: absolute;
+    margin-left: -45px;
+    margin-top: -30px;
+    background-color: #fff;
+    height: 20px;
+    padding: 3px;
+    border-radius: 10px 10px 0 10px;
+    border: #242424 solid 1px;
+    cursor: pointer;
+    opacity: 0.75;
+}
+.frame__hide:hover {
+    opacity: 1;
 }
 .iframe {
     width: 100%;
-    height: 60vh;
+    height: 50vh;
+}
+.small__frame {
+    margin: 40px 20px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 999999;
+    opacity: 0.85;
+}
+.close {
+    opacity: 0.75;
+    margin-right: -25px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: #242424 solid 1px;
+    background-color: #fff;
+    border-radius: 10px 10px 10px 0;
+    height: 25px;
+    margin-top: -24px;
+    cursor: pointer;
+}
+.close:hover {
+    opacity: 1;
+}
+.small__frame > div > img {
+    display: none;
+}
+.small__frame > div > iframe {
+    height: 18vh;
+    min-height: 150px;
 }
 .chart {
     border: 2px solid #ccc;
@@ -200,6 +240,7 @@ A:hover {
     border: 1px solid #242424;
     border-radius: 5px;
     margin: 20px 7px 0 7px;
+    padding-bottom: 10px;
 }
 /* Loader animation */
 .loader__placeholder{
