--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ A:hover {
 .row::-webkit-scrollbar-thumb {border-radius: 5px;background: #242424;}
 .row:hover::-webkit-scrollbar-thumb {background: #777;}
 .item {
-    margin: 5px 5px 5px 0;
+    margin: 5px 5px 5px -3px;
     text-align: center;
     border: 2px solid #ccc;
     border-radius: 5px;
