--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ A:hover {
 .row::-webkit-scrollbar-thumb {border-radius: 5px;background: #242424;}
 .row:hover::-webkit-scrollbar-thumb {background: #777;}
 .item {
-    margin: 5px 5px 5px -10px;
+    margin: 5px;
     text-align: center;
     border: 2px solid #ccc;
     border-radius: 5px;
@@ -138,9 +138,10 @@ A:hover {
 .container {
     display: flex;
     flex-direction: row;
+    padding: 0;
 }
 .item__poster {
-    margin: 5px;
+    margin-left: 7px;
     min-height: 350px;
     min-width: 150px;
     overflow: hidden;
@@ -155,9 +156,10 @@ A:hover {
     max-width: 150px;
 }
 .item__info {
+    margin-left: 5px;
+    margin-right: 7px;
     border: 2px solid #ccc;
     border-radius: 5px;
-    margin: 5px 10px 5px 10px;
     font-size: 15px;
     background-color: #fff;
     color: #242424;
