--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
 }
 body {
     overflow-x: hidden;
-    background-image: url("./img/background.jpg");
+    background-image: url("./img/background.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
