--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     background-attachment: fixed;
     background-position: center;
     margin: 0;
-    background-color: #343434;
+    background-color: #fff;
     font-family: sans-serif;
 }
 A {
