--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ A:hover {
     color: #fff;
     border-radius: 5px;
     font-weight: 700;
-    padding: 10px 25px;
+    padding: 10px;
     cursor: pointer;
     box-shadow: 10px 7px 15px #333;
 }
