--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Main style */
 html {
     box-sizing: border-box;
 }
@@ -27,6 +28,7 @@ A:hover {
     z-index: 9999999;
     cursor: pointer;
 }
+/* Ui control buttons */
 .up__btn > img {
     height: 55px;
     border: 3px solid #ccc;
@@ -86,6 +88,7 @@ A:hover {
     color: darkorange;
     background-color: #fff;
 }
+/* Content type section */
 .type, .main__section__search {
     display: flex;
     flex-direction: row;
@@ -109,64 +112,6 @@ A:hover {
     color: darkorange;
     background-color: #fff;
 }
-.btn__info {
-    box-shadow: 10px 7px 15px #555;
-    background-color: rgb(241, 155, 48);
-    border-width: 2px;
-    border-style: solid;
-    border-color: darkorange;
-    color: #fff;
-    border-radius: 5px;
-    font-weight: 700;
-    padding: 5px;
-    cursor: pointer;
-    margin: 15px 0 0 0;
-}
-.btn__info:hover {
-    color: darkorange;
-    background-color: #fff;
-}
-.btn__info__rec {
-    position: absolute;
-    text-align: center;
-    box-shadow: 10px 7px 15px #555;
-    background-color: rgb(241, 155, 48);
-    border-width: 2px;
-    border-style: solid;
-    border-color: darkorange;
-    color: #fff;
-    border-radius: 5px;
-    font-weight: 700;
-    padding: 5px;
-    cursor: pointer;
-    margin: 20px 0 0 -165px;
-    width: 120px;
-}
-.btn__info__rec:hover {
-    color: darkorange;
-    background-color: #fff;
-}
-.rec__title {
-    margin: 0 auto !important;
-}
-.rec__list {
-    display: flex;
-    flex-direction: row;
-    margin: 20px 7px 20px 7px;
-    max-height: 335px;
-    overflow-y: auto;
-    box-shadow: 10px 7px 15px #555;
-    border-radius: 5px;
-    background-color: #242424;
-    opacity: 0.8;
-}
-.rec__list:hover {
-    opacity: 1;
-}
-.rec__list::-webkit-scrollbar-track {border-radius: 5px;}
-.rec__list::-webkit-scrollbar {height: 7px;}
-.rec__list::-webkit-scrollbar-thumb {border-radius: 5px;background: #242424;}
-.rec__list:hover::-webkit-scrollbar-thumb {background: #777;}
 /* Title */
 .title {
     box-shadow: 10px 7px 15px #333;
@@ -236,6 +181,23 @@ A:hover {
     box-shadow: 10px 7px 15px #555;
     max-width: 150px;
 }
+.btn__info {
+    box-shadow: 10px 7px 15px #555;
+    background-color: rgb(241, 155, 48);
+    border-width: 2px;
+    border-style: solid;
+    border-color: darkorange;
+    color: #fff;
+    border-radius: 5px;
+    font-weight: 700;
+    padding: 5px;
+    cursor: pointer;
+    margin: 15px 0 0 0;
+}
+.btn__info:hover {
+    color: darkorange;
+    background-color: #fff;
+}
 .item__info {
     box-shadow: 10px 7px 15px #333;
     margin-left: 5px;
@@ -248,7 +210,53 @@ A:hover {
     padding: 10px;
     width: 100%;
 }
+/* Recomendations */
+.btn__info__rec {
+    position: absolute;
+    text-align: center;
+    box-shadow: 10px 7px 15px #555;
+    background-color: rgb(241, 155, 48);
+    border-width: 2px;
+    border-style: solid;
+    border-color: darkorange;
+    color: #fff;
+    border-radius: 5px;
+    font-weight: 700;
+    padding: 5px;
+    cursor: pointer;
+    margin: 20px 0 0 -165px;
+    width: 120px;
+}
+.btn__info__rec:hover {
+    color: darkorange;
+    background-color: #fff;
+}
+.rec__title {
+    margin: 0 auto !important;
+}
+.rec__list {
+    display: flex;
+    flex-direction: row;
+    margin: 20px 7px 20px 7px;
+    max-height: 335px;
+    overflow-y: auto;
+    box-shadow: 10px 7px 15px #555;
+    border-radius: 5px;
+    background-color: #242424;
+    opacity: 0.8;
+}
+.rec__list:hover {
+    opacity: 1;
+}
+.rec__list::-webkit-scrollbar-track {border-radius: 5px;}
+.rec__list::-webkit-scrollbar {height: 7px;}
+.rec__list::-webkit-scrollbar-thumb {border-radius: 5px;background: #242424;}
+.rec__list:hover::-webkit-scrollbar-thumb {background: #777;}
 /* Youtube trailers */
+.iframe {
+    width: 100%;
+    height: 55vh;
+}
 .trailer__frame {
     box-shadow: 10px 7px 15px #333;
     border: 2px solid #ccc;
@@ -273,16 +281,21 @@ A:hover {
 .frame__hide:hover {
     opacity: 1;
 }
-.iframe {
-    width: 100%;
-    height: 55vh;
-}
+/* Small frame */
 .small__frame {
     margin: 40px 20px;
     position: fixed;
     bottom: 0;
     left: 0;
     z-index: 999999;
+}
+.small__frame > div > img {
+    display: none;
+}
+.small__frame > div > iframe {
+    box-shadow: 10px 7px 15px #333;
+    height: 18vh;
+    min-height: 150px;
 }
 .close {
     box-shadow: 10px 7px 15px #333;
@@ -301,24 +314,33 @@ A:hover {
 .close:hover {
     opacity: 1;
 }
-.small__frame > div > img {
-    display: none;
-}
-.small__frame > div > iframe {
-    box-shadow: 10px 7px 15px #333;
-    height: 18vh;
-    min-height: 150px;
-}
-.chart {
-    box-shadow: 10px 7px 15px #333;
-    border: 2px solid #ccc;
-    border-radius: 5px;
+/* Top table */
+.table {
+    width: 100%;
+    text-align: center;
     background-color: #242424;
-    overflow: hidden;
-    margin: 7px;
-    opacity: 0.85;
+    color: #aaa;
+    margin: 0 7px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    padding: 15px;
 }
-/* Footer*/
+.table > thead {
+    color: #fff;
+}
+.table > thead > tr > th {
+    font-size: 12px;
+    font-weight: 300;
+    padding: 12px 10px;
+    border-bottom: 2px solid darkorange;
+    color: darkorange;
+}
+.table > tbody > tr > td {
+    font-size: 12px;
+    padding: 10px;
+    color: #8D8173;
+}
+/* Footer */
 .footer {
     box-shadow: 10px 7px 15px #333;
     opacity: 0.5;
