--- a/style.css
+++ b/style.css
@@ -324,6 +324,7 @@ A:hover {
     border: 2px solid #ccc;
     border-radius: 10px;
     padding: 15px;
+    box-shadow: 10px 7px 10px #333;
 }
 .table > thead {
     color: #fff;
