--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     overflow-x: hidden;
     overflow-y: scroll;
     margin: 0;
-    background-color: #444;
+    background-color: #bbb;
     font-family: sans-serif;
 }
 A {
