--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ table > tbody > tr > td {
     cursor: pointer;
 }
 .user {
-    color: darkorange;
+    color: tomato;
 }
 /* Search form */
 .br {
