--- a/style.css
+++ b/style.css
@@ -122,10 +122,10 @@ table > tbody > tr > td {
     border: 3px solid #ccc;
     border-radius: 50px;
     box-shadow: 10px 7px 10px #333;
-    background-color: #fff;
+    background-color: #ccc;
 }
 .up__btn > img:hover {
-    background-color: #444;
+    background-color: #fff;
 }
 /* Header */
 .header {
