--- a/style.css
+++ b/style.css
@@ -44,6 +44,9 @@ table > tbody > tr > td {
 table > thead > tr > th:nth-child(1) {
     width: 15px;
 }
+.deleteRow {
+    width: 30px;
+}
 .btn__info:hover, .btn__watch__online:hover, .btn_type:hover, .btn:hover, .btn__info__rec:hover, .btn__guest:hover, .btn__reg:hover {
     color: darkorange;
     background-color: #fff;
