--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ table > thead > tr > th:nth-child(1) {
 }
 .deleteRow {
     width: 15px;
+    background-color: #242424;
+}
+.deleteRow:hover {
+    background-color: #242424;
 }
 .btn__info:hover, .btn__watch__online:hover, .btn_type:hover, .btn:hover, .btn__info__rec:hover, .btn__guest:hover, .btn__reg:hover {
     color: darkorange;
