--- a/style.css
+++ b/style.css
@@ -47,9 +47,11 @@ table > thead > tr > th:nth-child(1) {
 .deleteRow {
     width: 15px;
     background-color: #242424;
+    opacity: 0.5;
 }
 .deleteRow:hover {
-    background-color: #242424;
+    background-color: #333;
+    opacity: 1;
 }
 .btn__info:hover, .btn__watch__online:hover, .btn_type:hover, .btn:hover, .btn__info__rec:hover, .btn__guest:hover, .btn__reg:hover {
     color: darkorange;
