--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ table > thead > tr > th:nth-child(1) {
     background-color: #333;
     opacity: 1;
 }
-.btn__info:hover, .btn__watch__online:hover, .btn_type:hover, .btn:hover, .btn__info__rec:hover, .btn__guest:hover, .btn__reg:hover {
+.btn__info:hover, .btn__watch__online:hover, .btn_type:hover, .btn:hover, .btn__info__rec:hover, .btn__guest:hover, .btn__reg:hover, .btn__request:hover {
     color: darkorange;
     background-color: #fff;
 }
@@ -160,6 +160,12 @@ table > thead > tr > th:nth-child(1) {
 .header__link {
     margin: 5px 5.5vw 5px 5.5vw;
     cursor: pointer;
+}
+.header__link > img {
+    background-color: #fff;
+    border-radius: 50px;
+    padding: 2px;
+    box-shadow: 10px 7px 10px #333;
 }
 .header__link1__desc:hover, .header__link2__desc:hover, .header__link3__desc:hover {
     color: #fff;
@@ -485,6 +491,35 @@ table > thead > tr > th:nth-child(1) {
     border-radius: 10px;
     height: 25px;
     margin-top: 14px;
+    cursor: pointer;
+}
+/* Request form */
+.msg {
+    width: -webkit-fill-available;
+    height: 100px;
+    resize: none;
+}
+.request__row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.name, .email {
+    margin: 20px 7px;
+    width: 70%;
+}
+.btn__request {
+    width: 50%;
+    margin: 20px 7px;
+    box-shadow: 10px 7px 15px #333;
+    background-color: darkgreen;
+    border-width: 2px;
+    border-style: solid;
+    border-color: darkgreen;
+    color: #fff;
+    border-radius: 5px;
+    font-weight: 700;
+    padding: 10px;
     cursor: pointer;
 }
 /* Top table */
