--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ table > thead > tr > th:nth-child(1) {
     background-color: #333;
     opacity: 1;
 }
-.btn__info:hover, .btn__watch__online:hover, .btn_type:hover, .btn:hover, .btn__info__rec:hover, .btn__guest:hover, .btn__reg:hover, .btn__request:hover {
+.btn__info:hover, .btn__watch__online:hover, .btn_type:hover, .btn:hover, .btn__info__rec:hover, .btn__guest:hover, .btn__reg:hover, .btn__request:hover, .btn__filter:hover {
     color: darkorange;
     background-color: #fff;
 }
@@ -223,6 +223,20 @@ table > thead > tr > th:nth-child(1) {
     border-width: 2px;
     border-style: solid;
     border-color: darkorange;
+    color: #fff;
+    border-radius: 5px;
+    font-weight: 700;
+    padding: 10px;
+    cursor: pointer;
+    box-shadow: 10px 7px 15px #333;
+}
+.btn__filter {
+    width: 20%;
+    margin: 15px 7px 0 7px;
+    background-color: darkgreen;
+    border-width: 2px;
+    border-style: solid;
+    border-color: darkgreen;
     color: #fff;
     border-radius: 5px;
     font-weight: 700;
