--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ table > thead > tr > th:nth-child(1) {
     color: #fff;
     border-radius: 5px;
     font-weight: 700;
-    padding: 10px;
+    padding: 1px 10px;
     cursor: pointer;
     box-shadow: 10px 7px 15px #333;
 }
