--- a/style.css
+++ b/style.css
@@ -257,7 +257,8 @@ table > thead > tr > th:nth-child(1) {
     margin-top: 13px;
     width: 100%;
     height: 325px;
-    border-radius: 1000px;
+    border-radius: 100px;
+    box-shadow: 10px 7px 15px #333;
 }
 /* Content type section */
 .type, .main__section__search {
