--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ table {
     border-radius: 10px;
     padding: 15px;
     box-shadow: 10px 7px 10px #333;
+    margin-bottom: 35px;
 }
 table > thead {
     color: #fff;
