--- a/style.css
+++ b/style.css
@@ -20,12 +20,11 @@ table {
     text-align: center;
     background-color: #242424;
     color: #aaa;
-    margin: 0 7px;
+    margin: 0 7px 35px 7px;
     border: 2px solid #ccc;
     border-radius: 10px;
     padding: 15px;
     box-shadow: 10px 7px 10px #333;
-    margin-bottom: 35px;
 }
 table > thead {
     color: #fff;
