--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@ html {
 body {
     margin: 0;
     background-color: #444;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     font-family: sans-serif;
 }
 A {
