--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ html {
 body {
     margin: 0;
     background-color: #444;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
