--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@ table > thead > tr > th {
     border-bottom: 2px solid darkorange;
     color: darkorange;
 }
+table > tbody > tr > th {
+    font-size: 12px;
+}
 table > tbody > tr > td {
     font-size: 12px;
     padding: 10px;
