--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body {
     background-size: cover;
     font-family: sans-serif;
 }
+body::-webkit-scrollbar { 
+    display: none; 
+}
 A {
     color: #ddd;
     font-size: 12px;
