--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     overflow-y: scroll;
 }
 body::-webkit-scrollbar-track {border-radius: 5px;}
-body::-webkit-scrollbar {height: 4px;}
+body::-webkit-scrollbar {width: 4px;}
 body::-webkit-scrollbar-thumb {border-radius: 5px;background: #242424;}
 body:hover::-webkit-scrollbar-thumb {background: #777;}
 A {
