--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ table > thead > tr > th:nth-child(1) {
 /* Header */
 .header {
     z-index: 100;
-    width: -webkit-fill-available;
+    width: 100%;
     position: fixed;
     background-color: #242424;
     color: #fff;
