--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ A:hover {
     color: #fff;
 }
 table {
-    width: 90vw;
-    max-width: 500px;
+    width: -moz-available;
+    width: -webkit-fill-available;
     text-align: center;
     background-color: #242424;
     color: #aaa;
