--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ table {
     text-align: center;
     background-color: #242424;
     color: #aaa;
-    margin: 0 7px 35px 7px;
+    margin: 0 0 35px 0;
     border: 2px solid #ccc;
     border-radius: 10px;
     padding: 15px;
